# marge

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  domains.rs  lib.rs  list_add.rs  list_del.rs  lists.rs  main.rs  member_add.rs  member_del.rs  members.rs  message_mod.rs  messages.rs  popup.rs  request.rs  response.rs  tui.rs  ui.rs
