[package]
name = "marge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["cargo"] }
color-eyre = "0.6.2"
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "5.0.1"
futures = "0.3.30"
pin-project-lite = "0.2.13"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
tui-textarea = "0.7.0"
